# ros_paparazzi

./: .gitignore  CMakeLists.txt  README.md  data.txt  data_LTP.txt  data_WGS.txt  docker-compose.yml  docker_compose.yml  install.sh  launch_raspy_node.sh  package.xml
data/: 24_12_11__12_09_50.data  24_12_18__12_25_56.data  25_02_06__10_14_35.data  25_02_06__11_09_27.data
include/ros_paparazzi/: cpp_header.hpp
msg/: Waypoint.msg
ros_paparazzi/: computer_suscriber.py  paparazzi_receive.py  paparazzi_send.py  raspy_publisher.py
ros_paparazzi/data/: autopilot_data.py
ros_paparazzi_core/: package.xml  setup.cfg  setup.py
ros_paparazzi_core/launch/: bokeh_launch.py  kf_sim_launch.py  main_launch.py  send_launch.py  sim_launch.py
ros_paparazzi_core/ros_paparazzi_core/: __init__.py  computer_suscriber.py  data_provider.py  paparazzi_receive.py  paparazzi_send.py  raspy_publisher.py  telemetry_receiver.py  waypoint_sender.py
ros_paparazzi_core/ros_paparazzi_core/aux/: geo_tools.py  sim_functions.py
ros_paparazzi_core/ros_paparazzi_core/com/: __init__.py  paparazzi_receive.py  paparazzi_send.py
ros_paparazzi_core/ros_paparazzi_core/data/: __init__.py  autopilot_data.py  gcs_data.py
ros_paparazzi_cpp/: CMakeLists.txt  package.xml
ros_paparazzi_cpp/src/: raspy_publisher.cpp  raspy_publisher_C.cpp
ros_paparazzi_interfaces/: CMakeLists.txt  package.xml
ros_paparazzi_interfaces/msg/: KalmanPredict.msg  KalmanUpdate.msg  Waypoint.msg
ros_paparazzi_interfaces/srv/: GetWaypoint.srv
scripts/: computer  raspy
src/: cpp_node.cpp
(+35 files in other folders)
